# automatic-barnacle

./: .gitignore  LICENSE  README.md  alembic.ini  encoder.py  hashtest.py  main.py  pyproject.toml  setup.cfg  setup.py  tasks.py  walktest.py
alembic/: env.py
alembic/versions/: 6599061d3643_.py  b8754f0e7863_initialise.py
barnacles/: __init__.py  api.py  data.py  model.py  views.py
barnacles/templates/: index.html  index2.html  play.html
src/barnacles/: __init__.py  api.py  data.py  model.py  store.py  views.py
src/barnacles/misha/: __init__.py  model.py
src/barnacles/misha/alembic/: env.py
src/barnacles/misha/alembic/versions/: a369f7557e85_rename_table.py  ac27cb423e98_testing_programmatic_fun.py
src/barnacles/templates/: index.html  play.html
tests/: __init__.py
