[tool.poetry]
name = "barnacles"
version = "1.4.0"
description = "Lightweight web-based media center"
authors = ["nullus <null@disasterarea.net>"]
license = "BSD 2-Clause"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
rarfile = "^3.2"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
waitress = "^1.4.4"
invoke = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
