[metadata]
name = barnacles
version = 1.3.1
author = nullus
author_email = null@disasterarea.net
url = https://disasterarea.net

[options]
packages = find:
package_dir = =src
install_requires =
  flask
  rarfile
  sqlalchemy
  alembic

[options.packages.find]
where = src

[options.package_data]
* = templates/*.html

[options.extras_require]
test =
  pytest
  waitress
